--- a/src/main/resources/templates/web-board.html
+++ b/src/main/resources/templates/web-board.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Spring Bootで作った掲示板</h1>
-<form action="/" method="post">
+<form th:action="@{/}" method="post">
     <input type="text" name="name" placeholder="name" required></br>
     <textarea name="text" rows="4" cols="50" maxlength="250" placeholder="message"></textarea></br>
     </br>
